# jpeg-to-raw-matcher

./: .gitignore  README.md  README_jp.md  pyproject.toml  requirements.txt  setup.py
.kiro/specs/raw-jpeg-matcher/: design.md  requirements.md  tasks.md
examples/: README.md  advanced_usage.py  basic_usage.py
src/: __init__.py  cli.py  copier.py  exceptions.py  exif_reader.py  file_scanner.py  index_manager.py  indexer.py  logger.py  match_manager.py  matcher.py  models.py  path_validator.py
tests/: README_integration.md  __init__.py  test_copier_properties.py  test_edge_cases.py  test_exif_reader_properties.py  test_file_scanner_properties.py  test_index_manager_properties.py  test_indexer_properties.py  test_integration.py  test_logger_properties.py  test_match_manager_properties.py  test_matcher_properties.py  test_models_properties.py  test_path_validator_properties.py
tests/data/: README.md
